# MLF-IO-Boilerplate

./: .env.example  README.md  api.py  data_models.py  generate_data.py  pyproject.toml  requirements.txt  run_prediction_job.ipynb  token_manager.py
.github/: dependabot.yml
cost_analysis/: cost_analysis.ipynb  cost_analysis.py  cost_analysis_instances.csv  generate_cost_analysis_instances.py
data/: data_example.json
